radix-engine-tests/tests/dec_macros/src/pdec_err_expr_not_supported.rs
use radix_engine_interface::prelude::*;

fn main() {
    const X: Decimal = dec!(a);
}
